Bug 401080 - Cumbersome opening of multiple reports
Summary: Cumbersome opening of multiple reports
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 4.8.2
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-15 20:15 UTC by Ralf Habacker
Modified: 2018-11-29 08:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3, 5.0.3
Sentry Crash Report:


Attachments
Patch for 5.x branch (4.80 KB, patch)
2018-11-27 17:00 UTC, Ralf Habacker
Details
Adjusted patch for the 5.x branch (5.20 KB, patch)
2018-11-28 19:42 UTC, Thomas Baumgart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-11-15 20:15:49 UTC
To open multiple reports, it is currently necessary to go to the report overview, open a report, go back to the overview and open the next one,
and so on. 

It would be much easier if you could select several reports in the
overview and open them all together.

STEPS TO REPRODUCE
1. start kmymoney with a present file or create a new empty one 
2. go to report tab
3. try to select more then one report to open them all together

OBSERVED RESULT
It is not possible to select more than one reports

EXPECTED RESULT
It should be possible to select more than one report in the overview to open them toggether with "right click"->"open"
Comment 1 Ralf Habacker 2018-11-27 17:00:37 UTC
Created attachment 116538 [details]
Patch for 5.x branch

Patch does not work for unknown reason
Comment 2 Ralf Habacker 2018-11-27 17:30:48 UTC
Review request for 4.8 is https://phabricator.kde.org/D1691
Comment 3 Thomas Baumgart 2018-11-28 19:42:50 UTC
Created attachment 116554 [details]
Adjusted patch for the 5.x branch
Comment 4 Ralf Habacker 2018-11-29 07:31:19 UTC
Git commit bf6278f923ca1307a229c9ca1e8b206a4b82f400 by Ralf Habacker.
Committed on 29/11/2018 at 07:30.
Pushed by habacker into branch '4.8'.

Add support for opening or printing of multiple reports

In the report overview select multiple reports and select one of the
available entries in the context menu opened with right mouse click.
FIXED-IN:4.8.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16912

M  +54   -22   kmymoney/views/kreportsview.cpp
M  +1    -0    kmymoney/views/kreportsview.h

https://commits.kde.org/kmymoney/bf6278f923ca1307a229c9ca1e8b206a4b82f400
Comment 5 Ralf Habacker 2018-11-29 08:12:42 UTC
Git commit 4e83c38abb4ff5b558c0f904a01a7f2b1ab76f6a by Ralf Habacker.
Committed on 29/11/2018 at 08:12.
Pushed by habacker into branch '5.0'.

Add support for opening or printing of multiple reports

In the report overview select multiple reports and select one of the
available entries in the context menu opened with right mouse click.

Cherry-picked from branch 4.8, commit bf6278f92.
Adjusted for KF5 by Thomas Baumgart.
FIXED-IN:4.8.3, 5.0.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D17231

M  +61   -19   kmymoney/plugins/views/reports/kreportsview.cpp
M  +1    -0    kmymoney/plugins/views/reports/kreportsview.h
M  +2    -4    kmymoney/plugins/views/reports/kreportsview_p.h

https://commits.kde.org/kmymoney/4e83c38abb4ff5b558c0f904a01a7f2b1ab76f6a
Comment 6 Ralf Habacker 2018-11-29 08:28:15 UTC
Git commit 85202855788b3cdb74ae79d142f96266cdcd861e by Ralf Habacker.
Committed on 29/11/2018 at 08:27.
Pushed by habacker into branch '5.0'.

Minor bracket placement fix

Fixup for commit 4e83c38ab.

M  +1    -2    kmymoney/plugins/views/reports/kreportsview.cpp

https://commits.kde.org/kmymoney/85202855788b3cdb74ae79d142f96266cdcd861e