Add support for opening or printing of multiple reports

In the report overview select multiple reports and select one of the
available entries in the context menu opened with right mouse click.

BUG:401080
FIXED-IN:4.8.3
Reviewed By: tbaumgart
Differential Revision: https://phabricator.kde.org/D16912